# power-system

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml  release.yml
docs/: index.md
docs/experiments/: create_network.ipynb
docs/knowledge_base/machine_learning/: index.md
docs/knowledge_base/power_system/: index.md
docs/knowledge_base/powerflow/: index.md
docs/knowledge_base/programming/: index.md
docs/source/: conf.py  index.rst
docs/source/refs/: index.md
docs/tutorials/: conductor_current.ipynb
pyohm/: units.py
pyohm/models/: base.py  conductor.py
pyohm/network/assets/: model.py
tests/models/: test_conductor.py
