[build-system]
# Minimum requirements for the build system to execute.
requires = [
  # sync with setup.py until we discard non-pep-517/518
  "setuptools>=45.0",
  "setuptools-scm[toml]>=6.2.3",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyohm"]


[project]
name = "pyohm"
dynamic = ["version"]
authors = [
  { name="Yan Zhang", email="dev.claude.yan.zhang@gmail.com" },
]
description = "A python library to create simple power grid and calculate powerflow."
readme = "README.md"
keywords = ["python", "power system", "power grid", "powerflow"]
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "pandas",
    "pydantic"
]

[project.optional-dependencies]

dev = ["pre-commit"]
doc = [
    "wheel",
    "mkdocs-material",
    "mknotebooks"
]
test = [
    "pytest",
    "pytest-cov"
]


[project.urls]
"Homepage" = "https://github.com/claudezss/pyohm"
"Bug Tracker" = "https://github.com/claudezss/pyohm/issues"


[tool.isort]
force_grid_wrap=0
include_trailing_comma=true
line_length=120
multi_line_output=3
skip_glob=["env/*", 'docs/*']
profile = "black"

[tool.black]
line_length = 120
max-line-length=120
exclude =[".git", "__pycache__", "venv", "env", 'docs/*']
include = ["pyohm/*", "tests/*"]

[tool.mypy]
strict=true
ignore_missing_imports=true
disallow_subclassing_any=false
exclude = ['env', 'venv', '.venv', 'tests/*', 'docs/*']
files = ["pyohm/*"]

[[tool.mypy.overrides]]
module = [
    "click.*",
    "bin.*"
]
ignore_errors = true

[tool.pytest.ini_options]
